--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,14 @@
 [build]
-  publish = "dist"
-  command = "npm run build"
+publish = "dist"
+command = "npm run build"
 
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+from = "/*"
+to = "/index.html"
+status = 200
+
+[build.environment]
+NODE_VERSION = "20"
+
+[build.processing]
+skip_processing = false
